add: AddOrderDialog & API

--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.11.1",
     "axios": "^1.4.0",
     "primeicons": "^6.0.1",
     "primevue": "^3.32.0",
-    "vue": "^3.3.4"
+    "vee-validate": "^4.11.1",
+    "vue": "^3.3.4",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.0",
