--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,7 @@
     "jsx": "preserve",
 
     /* Linting */
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "strict": true
   },
   "include": [
     "src/**/*.ts",
